--- a/Objects/UartTest.build_log.htm
+++ b/Objects/UartTest.build_log.htm
@@ -30,18 +30,14 @@ Rebuild target 'CMSIS-DAP'
 assembling startup_MKL25Z4.s...
 compiling system_MKL25Z4.c...
 compiling uart.c...
-uart.c(178): warning:  #177-D: variable "songTempo"  was declared but never referenced
+uart.c(173): warning:  #550-D: variable "songSize"  was set but never used
+  static uint16_t songSize = 0; // gets the song size of calculation
+uart.c(174): warning:  #177-D: variable "songTempo"  was declared but never referenced
   static uint16_t songTempo = 80; // Beats per minute
-uart.c(179): warning:  #177-D: variable "noteDelay"  was declared but never referenced
-  static float noteDelay = .25; // roughly .25 seconds
-uart.c(180): warning:  #177-D: variable "cntOverflow"  was declared but never referenced
-  static uint32_t cntOverflow = 0; // counts the overflows
-uart.c(181): warning:  #177-D: variable "songCnt"  was declared but never referenced
-  static uint32_t songCnt = 0; // Counts the total time spent
-uart.c: 4 warnings, 0 errors
+uart.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=1616 RO-data=232 RW-data=2876 ZI-data=356  
-".\Objects\UartTest.axf" - 0 Error(s), 4 Warning(s).
+Program Size: Code=1780 RO-data=224 RW-data=2872 ZI-data=352  
+".\Objects\UartTest.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -71,7 +67,7 @@ Package Vendor: Keil
       Source file:   Device\Source\ARM\startup_MKL25Z4.s
       Source file:   Device\Source\system_MKL25Z4.c
       Include file:  Device\Source\system_MKL25Z4.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
