Final iteration. Tested, working, all features.

--- a/Objects/servo.build_log.htm
+++ b/Objects/servo.build_log.htm
@@ -22,16 +22,18 @@ Dialog DLL:      TARMCM1.DLL V1.14.4.0
  
 <h2>Project:</h2>
 F:\Zenpod\servo.uvprojx
-Project File Date:  03/28/2022
+Project File Date:  04/14/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'CMSIS-DAP'
+compiling tempFiles.c...
 compiling system_MKL25Z4.c...
 assembling startup_MKL25Z4.s...
+compiling audio.c...
 compiling motor.c...
 linking...
-Program Size: Code=5640 RO-data=288 RW-data=20 ZI-data=368  
+Program Size: Code=4396 RO-data=296 RW-data=11372 ZI-data=392  
 ".\Objects\servo.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -59,10 +61,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: Keil::Device:Startup:2.5.0
-      Source file:   Device\Source\ARM\startup_MKL25Z4.s
       Include file:  Device\Source\system_MKL25Z4.h
       Source file:   Device\Source\system_MKL25Z4.c
-Build Time Elapsed:  00:00:01
+      Source file:   Device\Source\ARM\startup_MKL25Z4.s
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
